test/fail/vt_list_infer00.v3
//@seman
type List<T> {
	case Nil;
	case Cons(head: T, tail: List<T>);
}
var x = List.Cons(0, List.Nil);
